--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>bob.java</groupId>
     <artifactId>javademo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
